# fastapi-stookwijzer

./: pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/stookwijzer/: stookwijzerapi.py
